# QConv

./: .gitignore  CMakeLists.txt  README.md  Utils.ipynb
include/src/: LatticeCrypto_priv.h  qconv.h  qconv_block.h  qconv_constants.h  qconv_crt.h  qconv_int16.h  qconv_int32.h  qconv_int32_ntt_constants.h  qconv_int64.h  qconv_utils.h
include/src/signed_types/: qconv_int16.h  qconv_int32.h  qconv_int32_mod_12289.h  qconv_int32_mod_12289_constants.h  qconv_int64.h
include/src/unsigned_types/: qconv_uint16.h  qconv_uint16_f_8.h  qconv_uint16_m_13.h  qconv_uint16_mod_f_3.h  qconv_uint16_mod_f_3_constants.h  qconv_uint16_mod_f_8.h  qconv_uint16_mod_f_8_constants.h  qconv_uint16_mod_m_13.h  qconv_uint32.h  qconv_uint32_mod_f_4.h  qconv_uint32_mod_f_4_constants.h  qconv_uint64.h  qconv_uint8.h  qconv_uint8_m_8.h  qconv_uint8_mod_m_8.h
include/test/: qconv_test_constants.h  qconv_test_crt.h  test_qconv_int32.h  test_qconv_int32_utils.h
include/test/signed_types/: qconv_test_int32.h  qconv_test_utils_int32.h
include/test/unsigned_types/: qconv_test_uint16.h  qconv_test_uint16_mod_f_3.h  qconv_test_uint16_mod_f_8.h  qconv_test_uint16_mod_m_13.h  qconv_test_uint32.h  qconv_test_uint32_mod_f_4.h  qconv_test_utils_uint16.h  qconv_test_utils_uint32.h
src/: CMakeLists.txt  qconv_block.c  qconv_crt.c  qconv_int16.c  qconv_int32.c  qconv_int32_ntt_constants.c  qconv_utils.c
src/signed_types/: qconv_int32.c  qconv_int32_mod_12289.c  qconv_int32_mod_12289_constants.c  qconv_int64.c
src/unsigned_types/: qconv_uint16.c  qconv_uint16_f_8.c  qconv_uint16_m_13.c  qconv_uint16_mod_f_3.c  qconv_uint16_mod_f_3_constants.c  qconv_uint16_mod_f_8.c  qconv_uint16_mod_f_8_constants.c  qconv_uint16_mod_m_13.c  qconv_uint32.c  qconv_uint32_mod_f_4.c  qconv_uint32_mod_f_4_constants.c  qconv_uint8.c  qconv_uint8_m_8.c  qconv_uint8_mod_m_8.c
test/: CMakeLists.txt  gnmnt.c  qconv_test_constants.c  qconv_test_crt.c  qconv_test_int32.c  qconv_test_utils_int32.c  test.c
test/signed_types/: qconv_test_int32.c  qconv_test_utils_int32.c
test/unsigned_types/: qconv_test_uint16.c  qconv_test_uint16_mod_f_3.c  qconv_test_uint16_mod_f_8.c  qconv_test_uint16_mod_m_13.c  qconv_test_uint32.c  qconv_test_uint32_mod_f_4.c  qconv_test_utils_uint16.c  qconv_test_utils_uint32.c
